(fix) Add border-top to leaderboard for alignment (fix) Update positioning of + and -

--- a/public/styles/styles/_leaderboard.scss
+++ b/public/styles/styles/_leaderboard.scss
@@ -1,3 +1,6 @@
+.leaderboard-container {
+  border-top: 0.06rem solid black;
+}
 
 .leaderboard-header {
   font-family: 'Quicksand-regular', sans-serif;
@@ -100,6 +103,11 @@ ul {
 
 .columnContainer {
   width: 50%;
+}
+
+a.close-button {
+  margin-right: -0.48rem;
+  margin-top: -0.18rem
 }
 
 
